[package]
name = "rust_bepuphysics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
profile = []

[dependencies]
glam = { version = "0.32" }
num-traits = "0.2"

[dev-dependencies]
bevy = "0.18"
rand = "0.9"
bepuvy-sys = { git = "https://github.com/DrewRidley/bepuvy-sys.git", rev = "bdb4f4d" }
avian3d = "0.5"

[[example]]
name = "tower"
path = "examples/tower.rs"

[[example]]
name = "rain"
path = "examples/rain.rs"

[[example]]
name = "rain_csharp"
path = "examples/rain_csharp.rs"

[[example]]
name = "rain_avian"
path = "examples/rain_avian.rs"
